--- a/templates/index.html
+++ b/templates/index.html
@@ -60,24 +60,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>User List</h1>
+        <h1>Add users</h1>
         <form action="/add_user" method="POST">
             <input type="text" name="username" placeholder="Username" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="submit" value="Add User">
         </form>
-        <table>
-            <tr>
-                <th>Username</th>
-                <th>Email</th>
-            </tr>
-            {% for user in users %}
-            <tr>
-                <td>{{ user.username }}</td>
-                <td>{{ user.email }}</td>
-            </tr>
-            {% endfor %}
-        </table>
+        <a href="/users">View User List</a>
     </div>
 </body>
 </html>
